--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,233 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1 {
+  margin: 0;
+}
+
+.wrapper {
+  background-image: url('../src/assets/Rectangle\ 2.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.landingPage__content {
+  text-align: center; 
+  color: #fff;
+  max-width: 560px;
+}
+
+.landingPage__content h1 {
+  font-size: 40px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.landingPage__content p {
+  max-width: 310px;
+  margin: 0 auto 20px;
+}
+
+.btn {
+  appearance: none;
+  font-size: 18px;
+  display: inline-block;
+  min-width: 180px;
+  min-height: 40px;
+  height: 40px;
+  background-color: #C3EDFF;
+  border: 2px solid #C3EDFF;
+  color: #000000;
+  text-align: center;
+  line-height: 38px;
+  border-radius: 10px;
+  padding: 0 15px;
+  transition: background-color .4s, color .4s, border-color .4s;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #fff;
+  color: #99defc;
+}
+
+.btn__answer {
+  background-color: transparent;
+  margin: 20px;
+}
+
+.btn__answer:hover {
+  background-color: #C3EDFF;
+  color: #000;
+}
+
+.btn__answer-active {
+  background-color: #C3EDFF;
+}
+
+.btn__restart {
+  border: 2px solid #fff;
+  color: #fff;
+  background-color: transparent;
+}
+
+.btn__restart:hover {
+  background-color: #677487;
+  color: #fff;
+  opacity: 0.3;
+}
+
+.btn__back {
+  appearance: none;
+  text-decoration: underline;
+  background-color: transparent;
+  border: none;
+  color: #677487;
+  font-size: 16px;  
+  cursor: pointer;
+}
+
+.wrapper__question {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding: 20px;
+}
+
+.question {
+  text-align: center;
+}
+
+.progressBar {
+  margin-bottom: 100px;
+}
+
+.question h3 {
+  font-size: 40px;
+  font-weight: 500;
+}
+
+.progress-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.wrapper__results {
+  padding: 50px;
+  text-align: center;
+  background-image: url('assets/Rectangle\ 3.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50vh;
+  position: relative;
+}
+
+.wrapper__results:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #000000;
+  opacity: 0.3;
+  pointer-events: none;
+}
+
+.results__head {
+  max-width: 550px;
+  margin: 0 auto 50px;
+  color: #fff;
+  z-index: 1;
+  position: relative;
+}
+
+.results__head h1 {
+  font-size: 40px;
+  font-weight: 600;
+}
+
+.results__head p {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+}
+
+.products {
+  padding-bottom: 50px;
+}
+
+.product {
+  width: 350px;
+  text-align: center;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.product__img {
+  position: relative;
+  padding-top: 100%;
+  background-color: #f6f6f6;
+  border-radius: 10px;
+  margin-bottom: 12px;
+}
+
+.product__img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.product__title {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 12px;
+}
+
+.product__price {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.product__actions {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.swiper-wrapper {
+  display: flex;
+}
+
+.swiper-button-prev {
+  display: none !important;
+} 
+
+.swiper-button-next {
+  color: #000000 !important;
+  background-color: #EEF7FB;
+  border-radius: 50%;
+  width: 50px !important;
+  height: 50px !important;
+}
+
+.swiper-button-next:after {
+  font-size: 25px !important;
+}
